syntax = "proto3";
option go_package = ".;pb";
package grpc;

service Session {
  rpc Session (RequestSession) returns (SessionInfo);
}

message RequestSession {
  string token = 1;
}

message SessionInfo {
  string       ID = 1;
  string   userID = 2;
}
